<resources>
    <string name="app_name">ཤེས་རིགCare</string>
    <string name="user_idMainAct">User ID</string>
    <string name="login_mainActivity">LOGIN</string>
    <string name="passwordMainActivity">Password</string>
    <string name="loginasMain">LOGIN AS</string>
    <string name="forgot_passwordMainActivity">Forgot Password?</string>
    <string name="title_activity_admin_dash_board">AdminDashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User ID</string>
    <string name="nav_header_subtitle">ADMIN</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>
    <string name="menu_addUser">ADD USER</string>
    <string name="menu_delUser">DELETE USER</string>
    <string name="menu_parent">ParentData</string>
    <string name="menu_teacher">TeacherData</string>
    <string name="admin">ADMIN</string>
    <string name="registerOpt">Register User</string>
    <string name="deleteOpt">Delete User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="change_passwordfrag">Change Password</string>
    <string name="user_id">USER ID</string>
    <string name="uemail">USER EMAIL</string>
    <string name="passwordU">PASSWORD</string>
    <string name="registerbtn">Register</string>
    <string name="register_usertitle">REGISTER USER</string>
    <string name="delete_usertitle">DELETE USER</string>
    <string name="deletebtn">Delete</string>
    <string name="email_idf">EMAIL ID</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="enter_oldP">Enter old password</string>
    <string name="enter_newP">Enter new password</string>
    <string name="enter_confimP">Enter new password</string>
    <string name="changepword">Change</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old password</string>
    <string name="confirmetext">Confirm new password</string>

    <string-array name="userType">
        <item>Admin</item>
        <item>Parent</item>
        <item>Teacher</item>
    </string-array>
    <string name="title_activity_teacher_dash_board">TEACHER</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_group">create group</string>
    <string name="chat">Chats</string>
    <string name="Result">Result</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_parent_chats">Chats</string>
    <string name="Fragment_parent_results">Results</string>

</resources>