<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PwordChangeParentandTeacher">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.SherigCare.AppBarOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/side_nav_bar"
            app:popupTheme="@style/Theme.SherigCare.PopupOverlay"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imagefpword"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".25"
        app:srcCompat="@drawable/logosherig"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="60dp" />

    <EditText
        android:id="@+id/txtoldPt"
        android:layout_width="289dp"
        android:layout_height="66dp"
        android:ems="10"
        android:hint="@string/enter_oldP"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagefpword" />

    <EditText
        android:id="@+id/txtnewPt"
        android:layout_width="289dp"
        android:layout_height="66dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/enter_newP"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtoldPt" />

    <EditText
        android:id="@+id/txtnewP2t"
        android:layout_width="289dp"
        android:layout_height="66dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/confirmetext"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnewPt" />

    <Button
        android:id="@+id/changept"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:background="@drawable/regbtn"
        android:text="@string/changepword"
        android:textColor="@color/white"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnewP2t"
        app:layout_constraintVertical_bias="0.102" />



</androidx.constraintlayout.widget.ConstraintLayout>